# Ground-Robot-Performing-Tasks-Autonomously-by-Perception

./: README.md
pie/: ov5647__base_soc_i2c0mux_i2c_1_ov5647_36_800x600.yaml
ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/install/sensor_fusion/lib/sensor_fusion/: image_executable
ros2/install/sensor_fusion/share/sensor_fusion/: package.sh
ros2/install/turtlebot3_autorace/share/turtlebot3_autorace/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2/install/turtlebot3_autorace_camera/share/turtlebot3_autorace_camera/: package.sh
ros2/log/: latest_build
ros2/slam_lane_tracking_pkg/: package.xml  setup.cfg
ros2/slam_lane_tracking_pkg/slam_lane_tracking_pkg/: centroid_logger_node.py  clean_map.py  generate_map.py  generate_trajectory_map.py  tf_logger.py
ros2/slam_lane_tracking_pkg/slam_lane_tracking_pkg/maps/: clean_map_obs.yaml
ros2/slam_lane_tracking_pkg/slam_lane_tracking_pkg/scripts/: pose_data.json
ros2/src/: README.md
ros2/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros2/src/log/: latest_build
ros2/src/sensor_fusion/: package.xml  setup.py
ros2/src/slam_lane_tracking_pkg/: setup.py
ros2/src/slam_lane_tracking_pkg/launch/: full_pipeline.launch.py
ros2/src/slam_lane_tracking_pkg/slam_lane_tracking_pkg/: reproject_pose_on_map.py  virtual_obstacles_node.py
ros2/src/turtlebot3_autorace/install/: local_setup.sh  setup.sh  setup.zsh
ros2/src/turtlebot3_autorace/log/: latest_build
(+38 files in other folders)
